<resources>
    <string name="app_name">FestivalAppClean</string>
    <string name="update">UPDATE</string>
    <string name="title_activity_update">UpdateActivity</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="add">Add</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="signin">Sign in</string>
    <string name="cancel">Cancel</string>
    <string name="login">Login</string>
    <string name="date_added">Date added</string>
    <string name="date_added_2">Sun Oct 29 2017 15:56:18 GMT+0100</string>
    <string name="checklist_item_title">Pick up granddad from the airport</string>
    <string name="long_description">What happen\'s if there is like a lot of text in this field?What happen\'s if there is like a lot of text in this field?What happen\'s if there is like a lot of text in this field?What happen\'s if there is like a lot of text in this field?What happen\'s if there is like a lot of text in this field?</string>

    <!--camera stuff-->
    <string name="picture">Picture</string>
    <string name="description_info">Info</string>
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="pay">Pay</string>
    <string name="balance">Balance</string>
    <string name="history">History</string>
    <string name="festival_name">{FESTIVAL_NAME}</string>
    <string name="api_key">AIzaSyAJEqEVjj-hWojlI_em3IPWZzZSU8Rah-I</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="confirm">Confirm</string>
    <string name="confirmation">Are you sure you want to add place</string>
    <string name="no">No</string>
    <string name="place">place</string>
    <string name="no_city">*No City*</string>
    <string name="home">Home</string>
    <string name="updated">Updated</string>
    <string name="new_">New</string>
    <string name="enter_text">Enter text</string>
    <string name="date">Date:</string>
    <string name="login_error_info">Wrong username or password</string>
    <string name="username_2">username</string>
    <string name="password_2">password</string>
    <string name="add_funds">Add Funds</string>
    <string name="split">Split</string>
    <string name="festival_app">Festival App</string>
</resources>
