<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".checklist.CheckListActivity">

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:padding="12dp"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="295dp"
            android:orientation="vertical"
            android:layout_marginBottom="5dp"

            >

            <LinearLayout
                android:id="@+id/lin_layout"
                android:layout_width="338dp"
                android:layout_height="77dp"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/checklist_item_title"
                    android:layout_width="201dp"
                    android:layout_height="wrap_content"
                    android:text="@string/checklist_item_title"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/date_added"
                    android:layout_width="96dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/date_added_2" />


            </LinearLayout>


            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/long_description"
                android:textAppearance="?android:attr/textAppearanceSmall"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


        </LinearLayout>

    </android.support.v7.widget.CardView>



</android.support.constraint.ConstraintLayout>